# Piki

./: .gitignore  package.ps1
po/zh_CN/: piki.po
src/: CMakeLists.txt  appicon.rc
src/contents/controls/: Header.qml  IllustViewProfileCard.qml  PixivImage.qml  Sidebar.qml
src/contents/controls/templates/: FeedPage.qml
src/contents/ui/: Debug.qml  FullscreenView.qml  IllustView.qml  Main.qml  Search.qml  Settings.qml
